2004-07-29 08:17 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridNodeVolume) added for volume optimzation.
	
2004-07-27 17:05 Mike Park  <mike.park@nasa.gov>

	* example/Makefile.am added om6p01 testcase to dist.
	
2004-07-26 17:36 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R =
	MIN(sqrt(AR),5.0). Varible R seems to reduce the number of
	negative volumes. Setting the Max R at 10 caused the Ax=B system
	to go unstable.

2004-07-26 14:38 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R to be
	a constant 1.25 for all elements. This value is similar to
	concrete. The G-S Ax=B linear elasticity solve appears more stable.

2004-07-26 14:06 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationSubIteration) now does
	Gauss-Seidel. The old Even-Odd was renamed to
	gridmoveElasticRelaxationEvenOdd.

2004-07-23 16:31 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R to be
	equal to 1/gridCellAspectRatio. This is the same as FUN3D
	gridmove.

2004-07-23 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) do not split an edge if it is
	near a cell with small aspect ratio to prevent really bad cells.

2004-07-23 13:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R to be
	a constant 1.0 for all elements. This value did the best at
	rotating an isotropic tet. Previously it was 1.0/volume which
	could be less than one for large tets.

2004-07-22 14:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmove*MPITest) made Initialize and Complete
	functions to test gridmove mpi load and set routines.
	* src/gridfortran.c (gridmove*mpitest_) made interfaces for
	initialize and complete gridmove routines.

2004-07-21 10:22 Mike Park  <mike.park@nasa.gov>

	* fixed bug reported by Alan Arslan compiling on IRIX64 with cc.